fix: Prevent large names from overlapping the expiration date

--- a/src/app/shared/ui/credit-card/credit-card-info/credit-card-info.component.scss
+++ b/src/app/shared/ui/credit-card/credit-card-info/credit-card-info.component.scss
@@ -19,6 +19,11 @@
     &__date span:last-child {
       font-size: 1em;
     }
+
+    &__name span:last-child {
+      max-width: 23rem;
+      overflow: hidden;
+    }
   }
 
   &--light {
